# nf_llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  collect.py  create_tables.py  dfs_agent.ipynb  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  enhanced-fantasy-football-app.py  fantasy-football-app.py  kb_agent.ipynb  loaded_context_qa.ipynb  nf_llm.ipynb  optimizer.ipynb  prompt.txt  pyproject.toml  requirements.txt
.cache/41/: cache.db
.devcontainer/: devcontainer.json  dockerfile  requirements.txt
.github/workflows/: ci.yml
backend/: app.py  nlp_module.py  optimization_module.py  test.ipynb
backend/data/: dk.csv  fantasy_pros.csv  week10_sunday_all.csv  week11_early.csv  week11_sunday_all.csv  week12_sunday_all.csv  week13_sun_mon.csv  week13_sunday_all.csv  week14_early.csv  week14_sunday_all.csv  week15_sunday_all.csv  week16_sunday_all.csv  week17_sunday_all.csv  week18_sunday_all.csv  week1_mid.csv  week2_all.csv  week2_early.csv  week4_early.csv  week4_late.csv  week5_all.csv  week5_early.csv  week5_sunday_all.csv  week6_early.csv  week6_sunday_all.csv  week7_sunday_all.csv  week8_early.csv  week8_prime.csv  week8_sunday_all.csv  week9_sunday_all.csv
collectors/: dk.py  fantasy_pros_projections.py  fantasy_pros_stats.py  utils.py
data/: dk.csv  fantasy_projections.csv  fantasy_pros.csv  fantasy_pros_stats.csv  fantasy_pros_stats_week_1_20240805.csv  fantasy_pros_stats_week_1_QB_stats.csv  fantasy_pros_stats_week_1_RB_stats.csv  fantasy_pros_stats_week_1_TE_stats.csv  fantasy_pros_stats_week_1_WR_stats.csv  fantasy_pros_stats_week_3_20240820_DST_stats.csv  fantasy_pros_stats_week_3_20240820_QB_stats.csv  fantasy_pros_stats_week_3_20240820_RB_stats.csv  fantasy_pros_stats_week_3_20240820_TE_stats.csv  fantasy_pros_stats_week_3_20240820_WR_stats.csv  fantasy_pros_stats_week_4_DST_stats.csv  fantasy_pros_stats_week_4_QB_stats.csv  fantasy_pros_stats_week_4_RB_stats.csv  fantasy_pros_stats_week_4_TE_stats.csv  fantasy_pros_stats_week_4_WR_stats.csv  merged_fantasy_football_data.csv  week17_sunday_all.csv  week1_early.csv  week3_all.csv  week4_early.csv  week4_late.csv  week5_early.csv  week6_early.csv  week6_sunday_all.csv  week9_sunday_all.csv
data/2023/: week12_sunday_all.csv  week13_sun_mon.csv  week14_early.csv  week16_sunday_all.csv  week1_mid.csv  week5_all.csv  week8_early.csv  week8_prime.csv  week8_sunday_all.csv
data/2024/: dk.csv  fantasy_projections.csv  fantasy_pros.csv  fantasy_pros_stats.csv  fantasy_pros_stats_week_1_QB_stats.csv  fantasy_pros_stats_week_1_RB_stats.csv  fantasy_pros_stats_week_1_TE_stats.csv  fantasy_pros_stats_week_1_WR_stats.csv
data/raw/dk_salaries/: DK_MAIN_2025W32_131064_raw.csv  DK_MAIN_2025W36_131064_raw.csv  DK_MAIN_2025W36_132847_raw.csv  DK_MAIN_2025W37_133233_raw.csv  DK_MAIN_2025W37_133554_raw.csv  DK_MAIN_2025W38_133903_raw.csv  DK_MAIN_2025W38_133969_raw.csv  DK_MAIN_2025W38_134039_raw.csv  DK_MAIN_2025W39_134308_raw.csv  DK_MAIN_2025W39_134406_raw.csv  DK_MAIN_2025W40_134308_raw.csv  DK_MAIN_2025W40_134675_raw.csv  DK_MAIN_2025W40_134753_raw.csv  DK_MAIN_2025W40_134762_raw.csv  DK_MAIN_2025W41_135005_raw.csv  DK_MAIN_2025W41_135142_raw.csv  DK_MAIN_2025W43_135778_raw.csv  DK_MAIN_2025W44_136394_raw.csv  DK_MAIN_2025W45_136716_raw.csv  DK_MAIN_2025W46_136970_raw.csv  DK_MAIN_2025W46_137114_raw.csv  DK_MAIN_2025W47_137398_raw.csv  DK_MAIN_2025W47_137417_raw.csv  DK_MAIN_2025W47_137541_raw.csv  DK_MAIN_2025W48_137950_raw.csv
data_generators/: generator.ipynb  get_dk.ipynb  get_fantasy_pros.ipynb  get_player_stats.ipynb
fantasy_football/: agents.py  app.py  config.py  data.py  display.py  optimizer.py
migrations/: schema.sql
mock_data/: players.csv  sentiment.csv
src/nf_llm/: __init__.py  app.py  cli.py  collect.py  data_io.py  db.py  espn_weekly.py  fantasy-football-app.py  models.py  optimizer.py  service.py
src/nf_llm/api/: main.py
src/nf_llm/collectors/: data_enrichment.py  dk.py  fantasy_pros_projections.py  fantasy_pros_stats.py  utils.py
src/nf_llm/fantasy_football/: agents.py  analysis.py  app.py  config.py  data.py  display.py  espn.py  espn_optimizer.py
static/js/: main.js
templates/: index.html
tests/: test_api.py  test_db.py  test_espn.py  test_espn_optimizer.py  test_export_run.py  test_utils.py
transformers/: dk_cleaner.py  fantasy_pros_cleaner.py  utils.py
