[project]
name = "nf_llm"
version = "0.1.0"
description = "NF LLM Project"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "bs4",
    "openai",
    "langchain",
    "Flask",
    "pulp",
    "transformers",
    "ag2",
    "scikit-learn",
    "numpy",
    "lxml",
    "ipywidgets",
    "streamlit",
    "requests",
    "typer",
    "psycopg2-binary",
    "sqlalchemy",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.25,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 88
extend-exclude = "src/"

[tool.ruff.lint]
select = []

[tool.poetry.scripts]
nf-llm = "nf_llm.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]