[project]
name = "nf_llm"
version = "0.1.0"
description = "NF LLM Project - Fantasy football data collection and lineup optimization using LLMs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Olindo"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas",
    "beautifulsoup4",  # Use full name instead of bs4
    "openai",
    "langchain",
    "pulp",
    "transformers",
    "ag2",
    "scikit-learn",
    "numpy",
    "lxml",
    "ipywidgets",
    "streamlit",
    "requests",
    "typer",
    "psycopg2-binary",
    "sqlalchemy",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.25,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
nf-llm = "nf_llm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nf_llm"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true