[project]
name = "nf_llm"
version = "0.1.0"
description = "NF LLM Project - Fantasy football data collection and lineup optimization using LLMs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Olindo"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas",
    "beautifulsoup4",
    "openai",
    "langchain",
    "pulp",
    "transformers",
    "ag2",
    "scikit-learn",
    "numpy",
    "lxml",
    "ipywidgets",
    "streamlit",
    "requests",
    "typer",
    "psycopg2-binary",
    "sqlalchemy",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.25,<1.0",
    "pydantic>=2.6,<3.0",
    "duckdb>=1.0",
    "duckdb-engine>=0.13",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
nf-llm = "nf_llm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nf_llm"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true

[tool.poetry.dependencies]
duckdb = "^1.0"
duckdb-engine = "^0.13"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
